--- a/example/static/index.html
+++ b/example/static/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="bower_components/adapter.js/adapter.js"></script>
+<script src="bower_components/adapter.js/release/adapter.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="./js/conferenceroom.js"></script>
